# sidecar-logging

./: Cargo.toml  Dockerfile.testlog  Dockerfile.vector  README.md  logging.yaml  run-pipe.sh  run.sh  vector-test.sh  vector.sh  vector.toml
src/: main.rs
src/piperun/: main.rs
src/testlog/: main.rs
